--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,125 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+  <ion-title>
+  Activity 3
+  </ion-title>
   </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
   </ion-header>
+  <ion-content [fullscreen]="true">
+  <ion-datetime value="2021-09-28"
+  display-timezone="utc"></ion-datetime>
+  <ion-item>
+ 
+<!-- Fill -->
+<ion-button expand="full" fill="outline">Home</ion-button>
+<ion-button expand="full" fill="outline">Gallery</ion-button>
+<ion-button expand="full" fill="outline">About</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<ion-badge slot="end">22</ion-badge>
+</ion-item>
+<ion-card>
+<ion-card-header>
+<ion-card-subtitle>Short Introduction </ion-card-subtitle>
+<ion-card-title>Hi,Good Day!</ion-card-title>
+</ion-card-header>
+<ion-card-content>
+My name is Mark Joshua G.Bombon. I'm currently a 3rd year student studying at Gordon
+College with a course of Bacheor of Science in Information Technology
+with the age of 20 years old. I live in Luacan, Dinalupihan, Bataan 
+where it's so far in the school in a face-face basis.
+We are a family of 4 persons and I am the eldest to son. During this pandemic their are so many changes
+especially in life and we manage to adjust even it is so hard 
+and my hobbies are only riding a bike,basketball,go to adventures in mountains,
+and ofcourse eat.
+</ion-card-content>
+</ion-card>
+
+<!-- Default Segment -->
+<ion-segment (ionChange)="segmentChanged($event)">
+  <ion-segment-button value="friends">
+    <ion-label>Friends</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="enemies">
+    <ion-label>Enemies</ion-label>
+  </ion-segment-button>
+</ion-segment>
+
+<!-- Disabled Segment -->
+<ion-segment (ionChange)="segmentChanged($event)" disabled value="sunny">
+  <ion-segment-button value="sunny">
+    <ion-label>Sunny</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="rainy">
+    <ion-label>Rainy</ion-label>
+  </ion-segment-button>
+</ion-segment>
+
+<!-- Segment with anchors -->
+<ion-segment (ionChange)="segmentChanged($event)">
+  <ion-segment-button value="dogs">
+    <ion-label>Dogs</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="cats">
+    <ion-label>Cats</ion-label>
+  </ion-segment-button>
+</ion-segment>
+
+<!-- Scrollable Segment -->
+<ion-segment scrollable value="heart">
+  <ion-segment-button value="home">
+    <ion-icon name="home"></ion-icon>
+  </ion-segment-button>
+  <ion-segment-button value="heart">
+    <ion-icon name="heart"></ion-icon>
+  </ion-segment-button>
+  <ion-segment-button value="pin">
+    <ion-icon name="pin"></ion-icon>
+  </ion-segment-button>
+  <ion-segment-button value="star">
+    <ion-icon name="star"></ion-icon>
+  </ion-segment-button>
+  <ion-segment-button value="call">
+    <ion-icon name="call"></ion-icon>
+  </ion-segment-button>
+  <ion-segment-button value="globe">
+    <ion-icon name="globe"></ion-icon>
+  </ion-segment-button>
+  <ion-segment-button value="basket">
+    <ion-icon name="basket"></ion-icon>
+  </ion-segment-button>
+</ion-segment>
+
+<!-- Segment with secondary color -->
+<ion-segment (ionChange)="segmentChanged($event)" color="secondary">
+  <ion-segment-button value="standard">
+    <ion-label>Standard</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="hybrid">
+    <ion-label>Hybrid</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="sat">
+    <ion-label>Satellite</ion-label>
+  </ion-segment-button>
+</ion-segment>
+
+<!-- Segment in a toolbar -->
+<ion-toolbar>
+  <ion-segment (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="camera">
+      <ion-icon name="camera"></ion-icon>
+    </ion-segment-button>
+    <ion-segment-button value="bookmark">
+      <ion-icon name="bookmark"></ion-icon>
+    </ion-segment-button>
+  </ion-segment>
+</ion-toolbar>
+
+<!-- Segment with default selection -->
+<ion-segment (ionChange)="segmentChanged($event)" value="javascript">
+  <ion-segment-button value="python">
+    <ion-label>Python</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="javascript">
+    <ion-label>Javascript</ion-label>
+  </ion-segment-button>
+</ion-segment>
